# sfml_hello_world

./: .gitignore  CMakeLists.txt  README.md
dependencies/load_ariel_font/: CMakeLists.txt
dependencies/load_ariel_font/load_ariel_font/: load_ariel_font.cpp  load_ariel_font.hpp
src/: main.cpp  pixel.hpp  sfml_window_helpers.cpp  sfml_window_helpers.hpp
